BB-1264 - post task template task endpoint contract tests
